# hackthon-storypal

./: .gitignore  .tool-versions  CLAUDE.md  Makefile  README.md  README.zh-TW.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: debug-to-pr.md  debug.md  docker-build.md  gemini-models.md  implement.md  make-run.md  manual-test.md  migrate.md  newjob.md  pr.md  verify-deploy.md
.claude/hooks/: post-edit-check.sh  pre-commit-check.sh
.github/workflows/: ci.yml  deploy.yml  terraform.yml
.serena/: project.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  304362ba64a0_add_dj_presets_and_tracks.py
backend/src/: audio_config.py  config.py  main.py
backend/src/application/interfaces/: __init__.py  image_provider.py  llm_provider.py  music_provider.py  voice_cache_repository.py
backend/src/application/tasks/: story_tasks.py
backend/src/domain/: errors.py
backend/src/domain/entities/: __init__.py  conversation_turn.py  latency_metrics.py  story.py  stt.py  voice.py  voice_sync_job.py
backend/src/domain/repositories/: story_repository.py
backend/src/domain/services/: usage_tracker.py
backend/src/domain/services/interaction/: __init__.py  gemini_realtime.py  realtime_mode.py
backend/src/domain/services/story/: content_generator.py  cost_calculator.py  engine.py  prompts.py  templates.py  tutor.py
backend/src/infrastructure/agents/: __init__.py  story_agent.py
backend/src/infrastructure/auth/: jwt.py
backend/src/infrastructure/persistence/: database.py  interaction_repository_impl.py  models.py  story_background_tasks.py  story_repository_impl.py
backend/src/infrastructure/providers/image/: __init__.py  factory.py  gemini_imagen.py
backend/src/infrastructure/providers/llm/: __init__.py  factory.py  gemini_llm.py
backend/src/infrastructure/providers/tts/: __init__.py  base.py  factory.py  gemini_tts.py
backend/src/infrastructure/storage/: __init__.py  factory.py  gcs_storage.py
backend/src/infrastructure/websocket/: base_handler.py  gemini_live_proxy.py  interaction_handler.py  story_handler.py  tutor_handler.py
backend/src/infrastructure/workers/: job_worker.py
backend/src/presentation/api/: __init__.py  dependencies.py
backend/src/presentation/api/middleware/: auth.py  rate_limit.py
backend/src/presentation/api/routes/: agent.py  auth.py  story.py  story_ws.py  tutor.py  tutor_ws.py
backend/src/presentation/api/schemas/: story_schemas.py
backend/tests/: conftest.py
backend/tests/unit/: conftest.py  test_config_parsing.py  test_domain_validator.py  test_gemini_imagen.py  test_gemini_tts.py  test_image_prompt_generation.py  test_realtime_mode.py  test_story_content_generator.py  test_story_entities.py  test_story_prompts.py  test_tutor_service.py
docs/hackathon/: extraction-plan.md  youtube-description.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/auth/: LoginButton.tsx  ProtectedRoute.tsx  UserMenu.tsx
frontend/src/components/demo/: DemoOverlay.tsx  DemoSceneVisuals.tsx  DemoTitleCard.tsx  SceneHighlighter.tsx  TechStackOverlay.tsx
frontend/src/components/interaction/: InteractionPanel.tsx  ModeSelector.tsx
frontend/src/components/layout/: Header.tsx  LanguageSwitcher.tsx  Sidebar.tsx
frontend/src/components/magic-dj/: TrackEditorModal.tsx
frontend/src/components/shared/: Spinner.tsx  (+2 more)
frontend/src/config/: providers.ts
frontend/src/data/: demoScript.ts
frontend/src/hooks/: useAudioDevices.ts  useAudioPlayback.ts  useConversationRecorder.ts  useDemoNarrator.ts  useGeminiLive.ts  useMicrophone.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  error-types.ts
frontend/src/routes/: LandingPage.tsx
frontend/src/services/: interactionApi.ts  musicApi.ts  storypalApi.ts  tutorApi.ts
frontend/src/stores/: authStore.ts  interactionStore.ts  settingsStore.ts  storypalStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts  interaction.ts  music.ts  storypal.ts
scripts/: check-migrations.sh  setup-worktree.sh
terraform/: .tflint.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/artifact-registry/: main.tf
terraform/modules/cloud-run/: main.tf
terraform/modules/cloud-sql/: main.tf
terraform/modules/secret-manager/: main.tf
terraform/modules/workload-identity/: main.tf  outputs.tf  variables.tf
terraform/scripts/: pre-apply-check.sh
(+34 files in other folders)
