[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storypal"
version = "0.1.0"
description = "StoryPal — AI-powered interactive storytelling and tutoring for kids"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "StoryPal Team"}
]
keywords = ["storytelling", "tts", "gemini", "kids", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # HTTP client
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    # Auth
    "google-auth>=2.27.0",
    "PyJWT>=2.8.0",
    "cachetools>=5.3.0",
    # Audio processing
    "pydub>=0.25.0",
    "static-ffmpeg>=2.7",
    # Image processing
    "Pillow>=10.0.0",
    # Cloud Storage
    "google-cloud-storage>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-aiofiles",
    "types-cachetools",
]

[project.urls]
Homepage = "https://github.com/storypal/hackthon-storypal"
Repository = "https://github.com/storypal/hackthon-storypal"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "UP042",  # prefer StrEnum over (str, Enum)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
show_error_codes = true
show_column_numbers = true
pretty = true
no_implicit_optional = false
disallow_any_generics = false
ignore_missing_imports = true
disable_error_code = ["override", "attr-defined", "arg-type", "abstract", "assignment", "operator", "union-attr", "var-annotated", "misc", "return-value"]

[[tool.mypy.overrides]]
module = [
    "google.cloud.*",
    "uvicorn.*",
    "aiofiles.*",
    "pydub.*",
    "google.auth.*",
    "google.oauth2.*",
    "httpx.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "starlette.*",
    "sqlalchemy.*",
    "alembic.*",
    "asyncpg.*",
    "websockets.*",
    "jwt.*",
    "dotenv.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
timeout = 30
addopts = "-v --tb=short"
markers = [
    "integration: tests requiring a real PostgreSQL database",
    "external: tests requiring external API keys",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/presentation/*",
    "*/infrastructure/websocket/*",
    "*/infrastructure/persistence/*",
    "*/infrastructure/providers/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 40
